Allow application to run as a standalone jar.