@@ -4,6 +4,14 @@
   <artifactId>tsumRecordReport</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Tsum (Hearts) Record Report</name>
+  
+  <properties>
+	<main.class>thr.controller.Main</main.class>
+	<maven.compiler.source>1.7</maven.compiler.source>
+	<maven.compiler.target>1.7</maven.compiler.target>
+	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
   <dependencies>
 <!--<dependency>
 	    <groupId>com.aspose</groupId>
@@ -42,6 +50,57 @@
 	</dependency>
   </dependencies>
 
+  <build>
+	<plugins>
+		<!-- Jar w/ dependencies -->
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-assembly-plugin</artifactId>
+			<configuration>
+				<appendAssemblyId>false</appendAssemblyId>
+				<descriptorRefs>
+					<descriptorRef>jar-with-dependencies</descriptorRef>
+				</descriptorRefs>
+				<archive>
+					<manifest>
+						<mainClass>${main.class}</mainClass>
+						<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+					</manifest>
+					<manifestEntries>
+						<Add-Opens>java.base/java.lang</Add-Opens>
+					</manifestEntries>
+				</archive>
+			</configuration>
+			<executions>
+				<execution>
+					<id>make-assembly</id>
+					<phase>package</phase>
+					<goals>
+						<goal>single</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-resources-plugin</artifactId>
+			<configuration>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+						<filtering>true</filtering>
+						<includes>
+							<include>**/*.properties</include>
+							<include>**/*.txt</include>
+							<include>**/*.xml</include>
+						</includes>
+					</resource>
+				</resources>
+			</configuration>
+		</plugin>
+	</plugins>
+  </build>
+
   <repositories>
     <repository>
         <id>central</id>
@@ -51,6 +110,6 @@
         <id>aspose</id>
         <name>Aspose Repository</name>
         <url>https://releases.aspose.com/java/repo/</url>
-  </repository>-->
-</repositories>
+    </repository>-->
+  </repositories>
 </project>
